<resources>

    <string name="app_name">ExertRMR Cal</string>
    <string name="title_activity_main">ExertRMR Cal</string><string name="weight">Enter weight in kg:</string>
    
    
    <string name="height">Enter height in cm:</string>
    <string name="age">Enter age:</string><string name="calcu">Calculate</string><string name="ans">Your BMR is </string><string name="c"> cal</string><string name="menu_settings">Settings</string>
    <string name="output">9999.99</string>
    
    
    

</resources>